--- a/CodeBase/Elmah.RavenDbErrorLog/packages.config
+++ b/CodeBase/Elmah.RavenDbErrorLog/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AsyncCTP" version="0.3" />
   <package id="elmah.corelibrary" version="1.2" />
+  <package id="Newtonsoft.Json" version="4.0.5" />
+  <package id="NLog" version="2.0.0.2000" />
+  <package id="RavenDB.Client" version="1.0.531" />
 </packages>
